k8s/overlays/prod/patch-deployment-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-docs
spec:
  replicas: 2
