k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-docs-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - smhsgame.dev
      secretName: dev-docs-prod-tls
  rules:
    - host: smhsgame.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-docs-svc
                port:
                  number: 8080
